--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
   },
   "dependencies": {
     "babel-plugin-transform-react-display-name": "6.25.0",
+    "bodymovin": "^4.13.0",
     "deepmerge": "^2.0.0",
     "directory-named-webpack-plugin": "^2.2.3",
     "dompurify": "^0.9.0",
